--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -4,6 +4,9 @@
     "pages/pen/photo",
     "pages/index/index"
   ],
+  "navigateToMiniProgramAppIdList": [
+    "wx25f51a6ee6fef14d"
+  ],
   "window": {
     "backgroundColor": "#F6F6F6",
     "backgroundTextStyle": "light",
