--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -2,7 +2,8 @@
   "pages": [
     "pages/pen/draw",
     "pages/pen/photo",
-    "pages/index/index"
+    "pages/index/index",
+    "pages/pen/share"
   ],
   "navigateToMiniProgramAppIdList": [
     "wx25f51a6ee6fef14d"
